Fixed search form for text input would not overlap microphone. Added click events to search buttons to reset form.

--- a/google/styles.css
+++ b/google/styles.css
@@ -90,15 +90,19 @@ header a:first-child {
   position:relative;
   margin: 0px 0 0 140px;
 }
+form {
+	height:27px;
+	width: 560px;
+  border:1px solid #1e5fcc;
+  padding-left:4px;
+}
 
 form input {
+	border: 0px;
   height: 25px;
-  width: 560px;
-  border:1px solid #1e5fcc;
-  margin: 22px 0 0 0px;
+  width: 535px;
+  margin: 0px 0 0 0px;
   font-size:14px;
-  padding-left:5px;
-  padding-bottom:3px;
 }
 
 form input:focus {
@@ -111,7 +115,7 @@ form img {
   height:20px;
   float:right;
   padding-right:3px;
-  margin-top:-25px;
+  margin-top:4px;
 }
 
 button {
@@ -129,6 +133,10 @@ button {
 
 button:hover {
   box-shadow: 0px 1px 2px #ccc;
+}
+
+button:focus {
+	outline:none;
 }
 
 .buttonBox {
